update notif, assign order
